Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ input[type='checkbox'] {
 }
 
 .wrap-collapsible {
-    margin: 1.5rem 0;
+    margin-top: 1rem;
+    margin: 0, 0;
 }
 
 .lbl-toggle {
